chore(models): download movement model + strict verifyModels + CI integration

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -52,6 +52,9 @@ jobs:
       - name: detekt
         run: ./gradlew detekt --stacktrace || true
 
+      - name: Verify ML Models
+        run: ./gradlew :app:verifyModels --stacktrace || true
+
       - name: Unit Coverage
         run: ./gradlew jacocoTestReport --stacktrace || true
 
