--- a/.github/workflows/android_instrumented.yml
+++ b/.github/workflows/android_instrumented.yml
@@ -14,6 +14,8 @@ jobs:
     timeout-minutes: 55
     env:
       GRADLE_OPTS: "-Djava.net.preferIPv4Stack=true -Djava.net.preferIPv6Addresses=false -Dfile.encoding=UTF-8"
+  MOVEMENT_ANALYSIS_MODEL_URL: ${{ secrets.MOVEMENT_ANALYSIS_MODEL_URL }}
+  MOVEMENT_ANALYSIS_MODEL_SHA256: ${{ secrets.MOVEMENT_ANALYSIS_MODEL_SHA256 }}
     steps:
       - name: Force IPv4 (disable IPv6)
         run: |
