ci(onnx): add ONNX validation step (shape & integrity)

--- a/.github/workflows/onnx-convert.yml
+++ b/.github/workflows/onnx-convert.yml
@@ -51,6 +51,11 @@ jobs:
       - name: Convert to ONNX
         run: python scripts/convert_to_onnx.py
 
+      - name: Validate ONNX models
+        run: |
+          python -m pip install onnx
+          python scripts/validate_onnx.py
+
       - name: List ONNX outputs
         run: ls -lh models/onnx
 
