--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ room = "2.7.2"
 work = "2.9.1"
 appcompat = "1.7.0"
 desugar = "2.0.4"
+datastore = "1.1.1"
 
 # Networking / JSON
 okhttp = "4.12.0"
@@ -85,6 +86,8 @@ room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-testing = { module = "androidx.room:room-testing", version.ref = "room" }
+datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
+datastore-core = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 
 # Networking & JSON
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
