--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -52,6 +52,8 @@ android-test-junit = "1.2.1"
 espresso = "3.6.1"
 android-test-core = "1.6.1"
 tensorflow-lite-metadata = "0.5.0"
+robolectric = "4.12.2"
+mockito = "5.12.0"
 
 [libraries]
 # Kotlin / Serialization / Coroutines
@@ -135,6 +137,9 @@ android-test-junit = { module = "androidx.test.ext:junit", version.ref = "androi
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
 android-test-core = { module = "androidx.test:core", version.ref = "android-test-core" }
 tensorflow-lite-metadata = { group = "org.tensorflow", name = "tensorflow-lite-metadata", version.ref = "tensorflow-lite-metadata" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+mockito.core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+coroutines.test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
