--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -59,6 +59,9 @@ horologist = "0.6.12"
 # KSP (Compatible with Kotlin 2.0.20)
 ksp = "2.0.20-1.0.25"
 
+# Hilt Dependency Injection
+hilt = "2.51.1"
+
 # Testing
 junit = "4.13.2"
 android-test-junit = "1.2.1"
@@ -156,6 +159,11 @@ work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "w
 # Desugaring
 desugar-jdk-libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar" }
 
+# Hilt Dependency Injection
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version = "1.2.0" }
+
 # Testing
 junit = { module = "junit:junit", version.ref = "junit" }
 android-test-junit = { module = "androidx.test.ext:junit", version.ref = "android-test-junit" }
@@ -173,5 +181,6 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 protobuf = { id = "com.google.protobuf", version = "0.9.4" }
 axion-release = { id = "pl.allegro.tech.build.axion-release", version.ref = "axion-release" }
