--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -Dkotlin.daemon.jvm.options=-Xmx2g
-org.gradle.daemon=false
+org.gradle.daemon=true
 org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
 android.useAndroidX=true
 android.enableJetifier=false
+kotlin.code.style=official
