--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -Dkotlin.daemon.jvm.options=-Xmx2g
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m
 org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.caching=true
-org.gradle.configureondemand=true
+org.gradle.parallel=false
+org.gradle.caching=false
+org.gradle.configureondemand=false
 android.useAndroidX=true
 android.enableJetifier=false
 kotlin.code.style=official
