Fix: Resolve build issues - Memory optimization, TOML syntax fix, and Hilt binding corrections
- Reduced JVM heap from 2g to 1024m for container environment
- Fixed syntax error in libs.versions.toml
- Converted DataStoreModule from object to abstract class with @Binds
- Added @Inject constructor to UserPreferencesDataStoreImpl
- Enables proper dependency injection for IUserPreferences interface

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,13 @@
-org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=384m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 org.gradle.daemon=true
 org.gradle.parallel=false
-org.gradle.caching=false
+org.gradle.caching=true
 org.gradle.configureondemand=false
 android.useAndroidX=true
 android.enableJetifier=false
+
+# Stabilität: weniger Worker für limitierte Container-Umgebung
+org.gradle.workers.max=1
+
+# Hinweis: Falls weiterhin Daemon-Kills auftreten, temporär auch --no-daemon nutzen.
 kotlin.code.style=official
