--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,10 @@
-org.gradle.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=384m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
-org.gradle.daemon=true
-org.gradle.parallel=false
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
 org.gradle.caching=true
-org.gradle.configureondemand=false
+org.gradle.configureondemand=true
 android.useAndroidX=true
-android.enableJetifier=false
-
-# Stabilität: weniger Worker für limitierte Container-Umgebung
-org.gradle.workers.max=1
-
-# Hinweis: Falls weiterhin Daemon-Kills auftreten, temporär auch --no-daemon nutzen.
-kotlin.code.style=official
+android.enableJetifier=true
+android.enableR8.fullMode=true
+android.r8.maxWorkers=2
+android.nonTransitiveRClass=true
+android.nonFinalResIds=false
