Force JavaPoet 1.13 and disable Hilt aggregating task

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,4 @@ android.enableR8.fullMode=true
 android.r8.maxWorkers=2
 android.nonTransitiveRClass=true
 android.nonFinalResIds=false
+hilt.enableAggregatingTask=false
