--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,14 @@
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx8192m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseG1GC -XX:MaxGCPauseMillis=200
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.workers.max=4
+kotlin.daemon.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m -XX:+UseG1GC
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8.fullMode=true
-android.r8.maxWorkers=2
+android.r8.maxWorkers=4
 android.nonTransitiveRClass=true
 android.nonFinalResIds=false
 hilt.enableAggregatingTask=false
